# vedic-astro-ai

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  packages.txt  pyproject.toml  requirements.txt
scripts/: build_index.py  extract_rules.py  ingest_vedastro.py
src/vedic_astro/: __init__.py  api.py  settings.py
src/vedic_astro/agents/: __init__.py  base.py  calibration.py  critic_agent.py  dasha_agent.py  divisional_agent.py  jaimini_agent.py  master_agent.py  natal_agent.py  orchestrator.py  output_formatter.py  pipeline.py  reviser_agent.py  solver_agent.py  special_lagna_agent.py  synthesis_agent.py  transit_agent.py
src/vedic_astro/engines/: __init__.py  dasha_engine.py  jaimini_engine.py  natal_engine.py  panchang_engine.py  special_lagna_engine.py  transit_engine.py  varga_engine.py  yoga_dosha_engine.py
src/vedic_astro/learning/: __init__.py  chart_weights.py  feature_builder.py  scorer.py  shadbala.py
src/vedic_astro/rag/: __init__.py  case_ingester.py  case_retriever.py  chunker.py  embedder.py  loaders.py  rule_extractor.py  rule_retriever.py  vector_store.py
src/vedic_astro/rules/: bphs_rules.py  rule_selector.py
src/vedic_astro/storage/: __init__.py  chart_repo.py  mongo_client.py  report_repo.py  session_store.py
src/vedic_astro/tools/: __init__.py  cache.py  datetime_utils.py  geo.py  hasher.py  (+1 more)
tests/: conftest.py
tests/engines/: test_dasha_engine.py  test_natal_engine.py  test_panchang_engine.py  test_transit_engine.py  test_varga_engine.py  test_yoga_dosha_engine.py
ui/: app.py  gradio_app.py
